# amazon-braket-algorithm-library

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  sitecustomize.py
notebooks/textbook/: Grovers_Search.ipynb  Grovers_Search_ibaraki_2025-10-24.ipynb
src/braket/experimental/algorithms/grovers_search/: __init__.py  grovers_search.py
